<resources>
    <string name="app_name">RecipeAppXML</string>
    <string name="categories">категории</string>
    <string name="recipe">рецепт</string>
    <string name="favorites">избранное</string>
    <string name="category_item_pic_content_description">Картинка элемента списка категорий</string>

    <string name="recipe_heading">Бургер с грибами и сыром</string>
    <string name="picture_of_recipe">Картинка рецепта</string>
    <string name="way_to_cook">Способ приготовления</string>
    <string name="ingredient">Ингредиент</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="portions">Порции</string>
    <string name="_1">1</string>
    <string name="favorites_key">FAVORITES\n</string>
    <string name="add_to_favorites">Кнопка добавления в избранное</string>
    <string name="description_picture_favorites">Картинка для экрана с избранными рецептами</string>
    <string name="favorites_stub">У вас пока нет избранных рецептов</string>
    <string name="icon_favorite">иконка избранного</string>
    <string name="recipes_stub">Рецептов нет...</string>
    <string name="categories_stub">Категорий нет...</string>
</resources>